# t4too_react

./: .easignore  .gitignore  package-lock.json  package.json
back/: .gitignore  README.md  invoice_test_data.sql  main.py  project.md  pyproject.toml
back/alembic/: README  env.py
back/alembic/versions/: 10a54facffec_my_tenant.py  1413b0e217b1_zme.py  15f5dc556088_semi1.py  1883ba7cb3e0_period.py  19f015eaf82f_e384.py  1e1e3cd3689d_my_tenant.py  2b5f2fc22bdb_payroll.py  2ce236c782ba_fullname.py  307f850278c9_hrs_perday.py  334df0f712c4_add_invoice.py  335958e551b0_add_canadian_payroll_fields_to_.py  34b45438832c_zme.py  36f6f88b9e37_payroll.py  377fcaa8f830_gin.py  3acde0fb9b24_payroll.py  3c2be954ebc0_payroll.py  3cad7e8dd7c7_e384.py  3ce6395aa1d4_hrs.py  3f925462e264_my_tenant.py  42c17c9b7413_payroll.py  461599cb2031_my_tenant.py  478e1cbf39ac_employee.py  4f4189f02efb_fk.py  5bd44146b204_add_employee.py  5ed5bfda48fb_e384.py  604af35b8459_update_base.py  6426bfe48ac2_fk.py  653c5d65f38d_fullname.py  67354d5da945_add_invoice.py  678c3c66dc0d_firebase.py  69587242bb7a_stripe.py  6e7c9242cfdc_fk.py  7104aedbe160_position.py  730c8eb0796f_weekday.py  (+40 more)
back/app/: config.py  mainapp.py
back/data/: finnhub_us_symbols.csv
back/docs/: ML_interview.docx  T4_process.docx  aiTech.docx  alembic.md  deepseek_text_20260306_ed7b38.txt  expectations.xlsx  process.md
back/playground/: json_stream.py  mcsv.py  mjson.py  mjsonl.py  policy_logs.csv  policy_logs.json  policy_logs.jsonl
back/scripts/: gen_rag_eval_dataset.py  run_rag_eval.py
back/tests/: test_agent_brain.py
(+570 files in other folders)
