[project]
name = "T4"
version = "1.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cloudinary>=1.44.1",
    "csv",
    "fastapi[standard]>=0.128.0",
    "firebase-admin>=7.1.0",
    "google-genai>=1.62.0",
    "langchain>=1.2.8",
    "langchain-azure-ai>=1.0.0",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.10",
    "openai>=2.16.0",
    "pandas>=3.0.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.46",
    "stripe>=11.0.0",
    "tavily>=1.1.0",
    "tenacity>=9.1.2",
]
